# SW_Universal-Test-Framework

./: .gitattributes  README.md  build_whl.ps1  pyproject.toml  rack_designer_GPT.py  rack_designer_K2.py  requirements.txt  setup_utfw_env.bat  setup_utfw_env.sh  utfw_gui.py
Nightly_regression/: test_suite_Nightly_Tests_20251003_180306.html  test_suite_Nightly_Tests_20251003_180306.json  test_suite_Nightly_Tests_20251003_180306.xml  test_suite_Nightly_Tests_20251003_180923.html  test_suite_Nightly_Tests_20251003_180923.json  test_suite_Nightly_Tests_20251003_180925.xml  test_suite_Nightly_Tests_20251003_204626.html  test_suite_Nightly_Tests_20251003_204626.json  test_suite_Nightly_Tests_20251003_204628.xml  test_suite_Nightly_Tests_20251003_211810.html  test_suite_Nightly_Tests_20251003_211810.json  test_suite_Nightly_Tests_20251003_211811.xml  test_suite_Nightly_Tests_20251004_210532.html  test_suite_Nightly_Tests_20251004_210532.json  test_suite_Nightly_Tests_20251004_210533.xml
Programming Manual/: PRE_POST_TEARDOWN.md  QUICK_REFERENCE.md  TEST_SUITE_RUNNER.md
UTFW/: __init__.py  core.py  ethernet.py  fx2LA.py  network.py  reporting.py  serial.py  snmp.py  substep.py  utilities.py  validation.py
_ENERGIS_Tests/: eeprom_checks.json
nightly_reports/: test_suite_Nightly_Tests_20251108_234758.html  test_suite_Nightly_Tests_20251108_234758.json  test_suite_Nightly_Tests_20251108_234759.xml  test_suite_Nightly_Tests_20251122_000700.html  test_suite_Nightly_Tests_20251122_000700.json  test_suite_Nightly_Tests_20251122_000700.xml  (+3 more)
test_suites/: failed.yaml  smoke.yaml  (+3 more)
(+226 files in other folders)
